--- a/iWork.Web.UI/iWork.Web.UI.vbproj
+++ b/iWork.Web.UI/iWork.Web.UI.vbproj
@@ -318,7 +318,7 @@
     <Content Include="Content\lib\angular-translate\loader-url.js" />
     <Content Include="Content\lib\angular\angular-animate.js" />
     <Content Include="Content\lib\angular\angular-bootstrap-switch.js" />
-    <Content Include="Content\lib\angular\angular-cookies.js" />
+    <Content Include="Content\lib\angular\angular-cookie.js" />
     <Content Include="Content\lib\angular\angular-messages.js" />
     <Content Include="Content\lib\angular\angular-mocks.js" />
     <Content Include="Content\lib\angular\angular-resource.js" />
